--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome to TeamGroup's Project</h1>
 <p>Here you can find out where to get a meal within three miles of campus for eight dollars or less.</p>
+
+<%= link_to 'Restaurants', controller: 'restaurants' %>
