Add New Restaurant link to Restaurant page

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,18 +1,26 @@
-<h1>Restaurant List</h1>
- 
-<table>
-  <tr>
-    <th>Genre</th>
-    <th>Name</th>
-    <th>Rating</th>
-  </tr>
- 
-  <% @restaurants.each do |restaurant| %>
-    <tr>
-      <td><%= restaurant.genre %></td>
-      <td><%= restaurant.name %></td>
-      <td><%= restaurant.rating %></td>
-      <td><%= link_to 'Show', restaurant_path(restaurant) %></td>
-    </tr>
-  <% end %>
-</table>
+<div id="site-header">
+  <div class="wrapper">
+    <h1><a href="./">Charlotte Cheap Eats</a></h1>
+  </div>
+</div>
+<div class="wrapper">
+  <div id="main">
+    <h1>Restaurant List</h1>
+    <table>
+      <tr>
+        <th>Genre</th>
+        <th>Name</th>
+        <th>Rating</th>
+      </tr>
+      <% @restaurants.each do |restaurant| %>
+        <tr>
+          <td><%= restaurant.genre %></td>
+          <td><%= restaurant.name %></td>
+          <td><%= restaurant.rating %></td>
+          <td><%= link_to 'Show', restaurant_path(restaurant) %></td>
+        </tr>
+      <% end %>
+    </table>
+    <br><%= link_to'Add a Restaurant', new_restaurant_path%>
+  </div>
+</div>
