--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,14 +1,21 @@
-<p>
-    <strong>Name:</strong>
-    <%= @restaurant.name %>
-</p>
-
-<p>
-    <strong>Genre:</strong>
-    <%= @restaurant.genre %>
-</p>
-
-<p>
-    <strong>Rating:</strong>
-    <%= @restaurant.rating %>
-</p>
+<div id="site-header">
+  <div class="wrapper">
+    <h1><a href="./">Charlotte Cheap Eats</a></h1>
+  </div>
+</div>
+<div class="wrapper">
+  <div id="main">
+    <p>
+        <strong>Name:</strong>
+        <%= @restaurant.name %>
+    </p>
+    <p>
+        <strong>Genre:</strong>
+        <%= @restaurant.genre %>
+    </p>
+    <p>
+        <strong>Rating:</strong>
+        <%= @restaurant.rating %>
+    </p>
+  </div>
+</div>
