--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,11 @@
-<h1>Welcome to TeamGroup's Project</h1>
-<p>Here you can find out where to get a meal within three miles of campus for eight dollars or less.</p>
-
-<%= link_to 'Restaurants', controller: 'restaurants' %>
+<div id="site-header">
+  <div class="wrapper">
+    <h1><a href="./">Charlotte Cheap Eats</a></h1>
+  </div>
+</div>
+<div class="wrapper">
+  <div id="main">
+    <p>Here you can find out where to get a meal within three miles of campus for eight dollars or less.</p>
+    <%= link_to 'Restaurants', controller: 'restaurants' %>
+  </div>
+</div>
