--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,23 +2,117 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-h1 {
-    color: Green;
-}
+/* ------------------------------ [ DEFAULTS ] */
 
 body {
-    background-color: #ffffcc;
+    background: #ebebeb;
+    color: #333333;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    margin: 0;
+}
+
+a {
+    color: #00703c;
+    text-decoration: underline dotted;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+p {
+    margin: 0 0 10px 0;
+}
+
+p:last-child {
+    margin: 0;
+}
+
+h1 {
+    font-size: 45px;
+    font-weight: 100;
+    margin: 0 0 20px 0;
+}
+
+h2 {
+    font-size: 40px;
+    font-weight: 100;
+    margin: 0 0 18px 0;
+}
+
+h3 {
+    font-size: 35px;
+    font-weight: 100;
+    margin: 0 0 16px 0;
+}
+
+h4 {
+    font-size: 30px;
+    font-weight: 100;
+    margin: 0 0 14px 0;
+}
+
+h5 {
+    font-size: 25px;
+    font-weight: 100;
+    margin: 0 0 12px 0;
+}
+
+h6 {
+    font-size: 20px;
+    font-weight: 100;
+    margin: 0 0 10px 0;
 }
 
 table, th, td {
-   border: 4px solid Green;
+    border: 3px solid #00703c;
 }
 
 table {
     border-collapse: collapse;
+    width: 100%;
 }
 
 th, td {
-    padding: 15px;
+    padding: 10px;
     text-align: left;
+}
+
+.wrapper {
+    width: 980px;
+    margin: auto;
+}
+
+
+/* ------------------------------ [ SITE HEADER ] */
+
+#site-header {
+    background: #00703c;
+    height: 75px;
+    width: 100%;
+}
+
+#site-header h1 {
+    color: #ffffff;
+    font-family: 'Century Gothic', sans-serif;
+    font-size: 50px;
+    line-height: 75px;
+}
+
+#site-header a {
+    color: white;
+    text-decoration: none;
+}
+
+
+/* ------------------------------ [ MAIN ] */
+
+#main {
+    background: white;
+    box-shadow: 0 0 10px #7a7a7a;
+    box-sizing: border-box;
+    margin: 20px 0 0 0;
+    padding: 20px;
+    width: 100%;
 }
