--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,6 +1,26 @@
-<h1>Add Restaurant</h1>
-
+<div id="site-header">
+  <div class="wrapper">
+    <h1><a href="./">Add a Restaurant</a></h1>
+  </div>
+</div>
+<div class="wrapper">
+<div id="main">
 <%= form_for :restaurant, url: restaurants_path do |f| %>
+
+  <% if @restaurant.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@restaurant.errors.count, "error") %> prohibited
+        this restaurant from being saved:
+      </h2>
+      <ul>
+        <% @restaurant.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
@@ -21,3 +41,5 @@
   </p>
 <% end %>
 <br><%= link_to'Back to Restaurants', restaurants_path%>
+</div>
+</div>
