Added edit functionality to restaurants

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -17,5 +17,6 @@
         <strong>Rating:</strong>
         <%= @restaurant.rating %>
     </p>
+    <%= link_to 'Restaurant List', restaurants_path %>
   </div>
 </div>
