--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -18,6 +18,7 @@
           <td><%= restaurant.name %></td>
           <td><%= restaurant.rating %></td>
           <td><%= link_to 'Show', restaurant_path(restaurant) %></td>
+          <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
         </tr>
       <% end %>
     </table>
