--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -19,6 +19,10 @@
           <td><%= restaurant.rating %></td>
           <td><%= link_to 'Show', restaurant_path(restaurant) %></td>
           <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
+          <td><%= link_to 'Destroy',
+                                    restaurant_path(restaurant),
+                                    method: :delete,
+                                    data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </table>
