--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -17,6 +17,36 @@
         <strong>Rating:</strong>
         <%= @restaurant.rating %>
     </p>
-    <%= link_to 'Restaurant List', restaurants_path %>
+    
+    <h2>Reviews</h2>
+    <% @restaurant.reviews.each do |review| %>
+    <p>
+      <strong>Reviewer: </strong>
+      <%= review.reviewer %>
+    </p>
+    
+    <p>
+      <strong>Review: </strong>
+      <%= review.body %>
+    </p>
+    <% end %>
+    
+    <h2>Add a Review</h2>
+    <%= form_for([@restaurant, @restaurant.reviews.build]) do |f| %>
+    <p>
+      <%= f.label :reviewer %><br>
+      <%= f.text_field :reviewer %>
+    </p>
+    <p>
+      <%= f.label :body %><br>
+      <%= f.text_area :body %>
+    </p>
+    <p>
+      <%= f.submit %>
+    </p>
+  <% end %>
+  
+  <br>
+  <%= link_to 'Restaurant List', restaurants_path %>
   </div>
 </div>
