--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -22,47 +22,20 @@ a:hover {
 }
 
 p {
-    margin: 0 0 10px 0;
+    margin: 0 0 20px 0;
 }
 
 p:last-child {
     margin: 0;
 }
 
-h1 {
-    font-size: 45px;
+h1, h2, h3, h4, h5, h6 {
     font-weight: 100;
-    margin: 0 0 20px 0;
 }
 
-h2 {
-    font-size: 40px;
-    font-weight: 100;
-    margin: 0 0 18px 0;
-}
-
-h3 {
-    font-size: 35px;
-    font-weight: 100;
-    margin: 0 0 16px 0;
-}
-
-h4 {
-    font-size: 30px;
-    font-weight: 100;
-    margin: 0 0 14px 0;
-}
-
-h5 {
-    font-size: 25px;
-    font-weight: 100;
-    margin: 0 0 12px 0;
-}
-
-h6 {
-    font-size: 20px;
-    font-weight: 100;
-    margin: 0 0 10px 0;
+hr {
+    border: 2px solid #cccccc;
+    margin: 20px;
 }
 
 table, th, td {
@@ -71,6 +44,7 @@ table, th, td {
 
 table {
     border-collapse: collapse;
+    margin: 0 0 20px 0;
     width: 100%;
 }
 
@@ -98,6 +72,7 @@ th, td {
     font-family: 'Century Gothic', sans-serif;
     font-size: 50px;
     line-height: 75px;
+    margin: 0;
 }
 
 #site-header a {
@@ -112,7 +87,39 @@ th, td {
     background: white;
     box-shadow: 0 0 10px #7a7a7a;
     box-sizing: border-box;
-    margin: 20px 0 0 0;
+    margin: 30px 0 0 0;
     padding: 20px;
     width: 100%;
+}
+
+.error {
+    color: #ff0000;
+}
+
+
+/* ------------------------------ [ COMMENTS ] */
+
+.comment {
+    background: #f5f5f5;
+    box-sizing: border-box;
+    margin: 5px 0 5px 0;
+    padding: 5px;
+    width: 100%;
+}
+
+
+/* ------------------------------ [ INPUT ] */
+
+input {
+    border: 2px solid #cccccc;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+textarea {
+    border: 2px solid #cccccc;
+    border-radius: 10px;
+    height: 100px;
+    padding: 5px;
+    width: 50%;
 }
