--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,6 @@
 <div id="site-header">
   <div class="wrapper">
-    <h1><a href="./">Charlotte Cheap Eats</a></h1>
+    <h1><a href="../">Charlotte Cheap Eats</a></h1>
   </div>
 </div>
 <div class="wrapper">
@@ -19,13 +19,10 @@
           <td><%= restaurant.rating %></td>
           <td><%= link_to 'Show', restaurant_path(restaurant) %></td>
           <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-          <td><%= link_to 'Destroy',
-                                    restaurant_path(restaurant),
-                                    method: :delete,
-                                    data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Destroy', restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </table>
-    <br><%= link_to'Add a Restaurant', new_restaurant_path%>
+    <p><%= link_to'Add a Restaurant', new_restaurant_path%></p>
   </div>
 </div>
