--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -7,3 +7,9 @@
     <strong>Review: </strong>
     <%= review.body %>
 </p>
+
+<p>
+    <%= link_to 'Destroy Review', [review.restaurant, review],
+                 method: :delete,
+                 data: { confirm: 'Are you sure?' } %>
+</p>
