More CSS cleaning

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+    <div id="site-header">
+      <div class="wrapper">
+        <h1><a href="../">Charlotte Cheap Eats</a></h1>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
