--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,8 +1,3 @@
-<div id="site-header">
-  <div class="wrapper">
-    <h1><a href="../">Charlotte Cheap Eats</a></h1>
-  </div>
-</div>
 <div class="wrapper">
   <div id="main">
     <h1><%= @restaurant.name %></h1>
@@ -14,28 +9,27 @@
     <hr>
     <h2>Reviews</h2>
     <% @restaurant.reviews.each do |review| %>
-    <div class="comment">
-      <p><strong>Reviewer: </strong><%= review.reviewer %></p>
-      <p><strong>Review: </strong><%= review.body %></p>
-    </div>
+      <div class="comment">
+        <p><strong>Reviewer: </strong><%= review.reviewer %></p>
+        <p><strong>Review: </strong><%= review.body %></p>
+      </div>
     <% end %>
     <hr>
     <h3>Add a Review</h3>
     <%= form_for([@restaurant, @restaurant.reviews.build]) do |f| %>
-    <p>
-      <%= f.label :reviewer %><br>
-      <%= f.text_field :reviewer %>
-    </p>
-    <p>
-      <%= f.label :body %><br>
-      <%= f.text_area :body %>
-    </p>
-    <p>
-      <%= f.submit %>
-    </p>
-  <% end %>
-
-  <br>
-  <%= link_to 'Restaurant List', restaurants_path %>
+      <p>
+        <%= f.label :reviewer %><br>
+        <%= f.text_field :reviewer %>
+      </p>
+      <p>
+        <%= f.label :body %><br>
+        <%= f.text_area :body %>
+      </p>
+      <p>
+        <%= f.submit %>
+      </p>
+    <% end %>
+  <hr>
+  <p class="text-center"><%= link_to 'Restaurant List', restaurants_path %></p>
   </div>
 </div>
