Set text input width to the same as the text area

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -165,6 +165,10 @@ input {
     padding: 10px;
 }
 
+input[type=text] {
+    width: 50%;
+}
+
 input[type=submit] {
     background: #00703c;
     color: #ffffff;
