--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_field :price %>
   
     <%= f.label :name %><br>
-    <%= f.text_area :name %>
+    <%= f.text_field :name %>
   
     <%= f.submit %>
   </p>
