Added CSS to meals list and form

--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -1,11 +1,13 @@
 <%= form_for([@restaurant, @restaurant.meals.build]) do |f| %>
   <p>
-    <%= f.label :price %>
+    <%= f.label :price %><br>
     <%= f.text_field :price %>
-  
+  </p>
+  <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
-  
+  </p>
+  <p>
     <%= f.submit %>
   </p>
 <% end %>
