--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,23 +1,27 @@
 <div class="wrapper">
   <div id="main">
     <h1>Restaurant List</h1>
-    <table>
-      <tr>
-        <th>Genre</th>
-        <th>Name</th>
-        <th>Rating</th>
-      </tr>
-      <% @restaurants.each do |restaurant| %>
+    <% if @restaurants.count == 0 %>
+      <p>No restaurants have been created.</p>
+    <% else %>
+      <table>
         <tr>
-          <td><%= restaurant.genre %></td>
-          <td><%= restaurant.name %></td>
-          <td><%= restaurant.rating %></td>
-          <td><%= link_to 'Show', restaurant_path(restaurant) %></td>
-          <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-          <td><%= link_to 'Destroy', restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <th>Genre</th>
+          <th>Name</th>
+          <th>Rating</th>
         </tr>
-      <% end %>
-    </table>
+        <% @restaurants.each do |restaurant| %>
+          <tr>
+            <td><%= restaurant.genre %></td>
+            <td><%= restaurant.name %></td>
+            <td><%= restaurant.rating %></td>
+            <td><%= link_to 'Show', restaurant_path(restaurant) %></td>
+            <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
+            <td><%= link_to 'Destroy', restaurant_path(restaurant), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </table>
+    <% end %>
     <p><%= link_to 'Add a Restaurant', new_restaurant_path%></p>
   </div>
 </div>
