--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,203 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+/* ------------------------------ [ MARGIN FIX ] */
+
+*:first-child {
+    margin-top: 0 !important;
+}
+
+*:last-child {
+    margin-bottom: 0 !important;
+}
+
+
+/* ------------------------------ [ DEFAULTS ] */
+
+a {
+    color: #00703c;
+    text-decoration: underline dotted;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+body {
+    background: #ebebeb;
+    color: #333333;
+    font-family: Arial, sans-serif;
+    font-size: 20px;
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Verdana, sans-serif;
+}
+
+hr {
+    border: 2px solid #cccccc;
+    margin: 50px;
+}
+
+p {
+    margin: 0 0 20px 0;
+}
+
+table {
+    border-collapse: collapse;
+    margin: 0 0 20px 0;
+    width: 100%;
+}
+
+th {
+    background: #00703c;
+    color: #ffffff;
+}
+
+th, td {
+    border: 3px solid #00703c;
+    padding: 10px;
+    text-align: left;
+}
+
+tr:nth-child(even) {
+    background: #ffffff;
+}
+
+tr:nth-child(odd) {
+    background: #ebebeb;
+}
+
+
+/* ------------------------------ [ LAYOUT ] */
+
+#main {
+    background: white;
+    box-shadow: 0 0 10px #7a7a7a;
+    box-sizing: border-box;
+    margin: 30px 0 30px 0 !important;
+    padding: 50px 25px;
+    width: 100%;
+}
+
+.wrapper {
+    width: 980px;
+    margin: auto;
+}
+
+
+/* ------------------------------ [ TEXT ] */
+
+.text-center {
+    text-align: center;
+}
+
+
+/* ------------------------------ [ SITE HEADER ] */
+
+#site-header {
+    background: #00703c;
+    height: 75px;
+    line-height: 75px;
+    text-align: center;
+    width: 100%;
+}
+
+#site-header h1 {
+    color: #ffffff;
+    float: left;
+    font-family: 'Century Gothic', sans-serif;
+    font-size: 50px;
+    margin: 0;
+}
+
+#site-header a {
+    color: white;
+    display: block;
+    text-decoration: none;
+}
+
+#site-header-menu {
+    float: right;
+    height: 75px;
+    list-style-type: none;
+    margin: 0;
+}
+
+#site-header-menu li {
+    display: block;
+    float: left;
+    height: 100%;
+    width: 75px;
+}
+
+#site-header-menu li:hover {
+    background: #008447;
+}
+
+#site-header-menu li a {
+    font-weight: bold;
+    padding: 0 5px 0 5px;
+}
+
+
+/* ------------------------------ [ ERROR MSG ] */
+
+#error_explanation {
+  background: #f5f5f5;
+  padding: 25px;
+}
+
+.error {
+    color: #ff0000;
+}
+
+
+/* ------------------------------ [ COMMENTS ] */
+
+.comment {
+    background: #f5f5f5;
+    box-sizing: border-box;
+    margin: 10px 0 10px 0;
+    padding: 25px;
+    width: 100%;
+}
+
+
+/* ------------------------------ [ INPUT ] */
+
+label {
+  display: block;
+  margin: 0 0 5px 0;
+  width: 100%;
+}
+
+input {
+    border: 2px solid #cccccc;
+    display: block;
+    font-size: 20px;
+    margin: 0 0 20px 0;
+    padding: 10px;
+}
+
+input[type=text] {
+    width: 50%;
+}
+
+input[type=submit] {
+    background: #00703c;
+    color: #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+textarea {
+    border: 2px solid #cccccc;
+    height: 100px;
+    margin: 0 0 20px 0;
+    padding: 10px;
+    width: 50%;
+}
