--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -1,13 +1,7 @@
 <%= form_for([@restaurant, @restaurant.meals.build]) do |f| %>
-  <p>
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </p>
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+  <%= f.label :price %>
+  <%= f.text_field :price %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <%= f.submit %>
 <% end %>
