--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -15,21 +15,13 @@
           </ul>
         </div>
       <% end %>
-      <p>
-        <%= f.label :name %><br>
-        <%= f.text_field :name %>
-      </p>
-      <p>
-        <%= f.label :genre %><br>
-        <%= f.text_field :genre %>
-      </p>
-      <p>
-          <%= f.label :rating %><br>
-          <%= f.text_field :rating %>
-      </p>
-      <p>
-        <%= f.submit %>
-      </p>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+      <%= f.label :genre %>
+      <%= f.text_field :genre %>
+      <%= f.label :rating %>
+      <%= f.text_field :rating %>
+      <%= f.submit %>
     <% end %>
     <hr>
     <p class="text-center"><%= link_to'Back to Restaurants', restaurants_path%></p>
