--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,13 +1,7 @@
 <%= form_for([@restaurant, @restaurant.reviews.build]) do |f| %>
-  <p>
-    <%= f.label :reviewer %><br>
-    <%= f.text_field :reviewer %>
-  </p>
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
+  <%= f.label :reviewer %>
+  <%= f.text_field :reviewer %>
+  <%= f.label :body %>
+  <%= f.text_area :body %>
+  <%= f.submit %>
 <% end %>
