--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -3,17 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-/* ------------------------------ [ MARGIN FIX ] */
-
-*:first-child {
-    margin-top: 0 !important;
-}
-
-*:last-child {
-    margin-bottom: 0 !important;
-}
-
-
 /* ------------------------------ [ DEFAULTS ] */
 
 a {
@@ -37,6 +26,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: Verdana, sans-serif;
 }
 
+h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+    margin-top: 0;
+}
+
 hr {
     border: 2px solid #cccccc;
     margin: 50px;
@@ -44,6 +37,10 @@ hr {
 
 p {
     margin: 0 0 20px 0;
+}
+
+p:last-child {
+    margin: 0;
 }
 
 table {
@@ -148,6 +145,7 @@ tr:nth-child(odd) {
 
 #error_explanation {
   background: #f5f5f5;
+  margin: 0 0 20px 0;
   padding: 25px;
 }
 
@@ -170,16 +168,16 @@ tr:nth-child(odd) {
 /* ------------------------------ [ INPUT ] */
 
 label {
-  display: block;
-  margin: 0 0 5px 0;
-  width: 100%;
+    display: block;
+    margin: 0 0 5px 0;
+    width: 100%;
 }
 
 input {
     border: 2px solid #cccccc;
     display: block;
     font-size: 20px;
-    margin: 0 0 20px 0;
+    margin: 0 0 20px 0 !important;
     padding: 10px;
 }
 
